project4tests/testprog3.err
testprog3.c: In function ‘main’:
testprog3.c:2:9: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
    2 |         printf("hello";
      |         ^~~~~~
testprog3.c:1:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
  +++ |+#include <stdio.h>
    1 | int main () {
testprog3.c:2:9: warning: incompatible implicit declaration of built-in function ‘printf’ [-Wbuiltin-declaration-mismatch]
    2 |         printf("hello";
      |         ^~~~~~
testprog3.c:2:9: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
testprog3.c:2:23: error: expected ‘)’ before ‘;’ token
    2 |         printf("hello";
      |               ~       ^
      |                       )
testprog3.c:3:18: error: expected ‘;’ before ‘}’ token
    3 |         return 0;
      |                  ^
      |                  ;
    4 | }
      | ~                 
